# fire-workspace

./: README.md
chat-plugin/: .env.example
chat-plugin/examples/: api_extract_kimi_code.py  batch_export_all.py
chat-plugin/src/chat_export/api/: auth.py  config.py  rate_limiter.py  runner.py
chat-plugin/src/chat_export/browser/: base_adapter.py  browser_manager.py  content_extractor.py  runner.py  session.py
chat-plugin/src/chat_export/cli/: main.py
chat-plugin/src/chat_export/core/: types.py
chat-plugin/src/chat_export/core/export/: json_export.py
chat-plugin/tasks/analysis/: kimi-plugin-analysis.md
ideas/content/: content-operation.md
ideas/learning/ai-agent/: agent-learning.md
ideas/toolkits/chat-plugin/: pyproject.toml  tasks.md
ideas/toolkits/chat-plugin/examples/: browser_export_kimi.py
ideas/toolkits/chat-plugin/src/chat_export/api/: base_adapter.py
ideas/toolkits/chat-plugin/src/chat_export/browser/: config.py  image_handler.py
ideas/toolkits/chat-plugin/src/chat_export/core/: adapter_base.py  content.py
ideas/toolkits/chat-plugin/src/chat_export/core/export/: base.py  factory.py  markdown.py
research/: AI时代个人行业研究方法论——通用框架与最佳实践.md  严格评判——信息差的本质与持续追踪的边界.md  个人行业研究操作系统——从第一天开始的实操手册.md  五大品类热度追踪实战手册.md
