[project]
name = "chat-export"
version = "0.1.0"
description = "Multi-platform chat export tool — extract conversations from Kimi, ChatGPT, Claude, Gemini via browser automation or API/SDK"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "httpx>=0.27",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
api = [
    "openai>=1.0",
    "anthropic>=0.30",
    "kimi-agent-sdk>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
chat-export = "chat_export.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_export"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
